working basic app for ngrx

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -2,3 +2,6 @@
   Hello world
   <h1>external home</h1>
 </div>
+ <button (click)="increment()">Increment</button>
+        <div> Count: {{ counter | async }}</div>
+        <button (click)="decrement()">Decrement</button>
